--- a/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_breadcrumbs.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_breadcrumbs.scss
@@ -7,8 +7,17 @@
       line-height: 1.0;
 
       a,
-      span {
+      span,
+      .divider {
         line-height: 1.0;
+      }
+
+      a {
+        color: $vgrintra-graydove;
+      }
+
+      .divider {
+        color: $vgrintra-graydove;
       }
 
     }
