--- a/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_main-navigation.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_main-navigation.scss
@@ -7,6 +7,14 @@
 
   @include border-radius();
 
+  a {
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
   > ul {
 
     list-style: none;
