--- a/core-bc/modules/theme/src/main/webapp/css/partials/organisms/_header.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/organisms/_header.scss
@@ -42,6 +42,11 @@
 			a {
 				color: $vgrintra-white;
 				display: inline-block;
+				text-decoration: none;
+
+				&:hover {
+					text-decoration: underline;
+				}
 			}
 
 			ul.navigation-list {
