--- a/core-bc/modules/theme/src/main/webapp/css/partials/utilities/_portlet-overrides.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/utilities/_portlet-overrides.scss
@@ -90,6 +90,7 @@
 					line-height: 1.0;
 					position: relative;
 					padding-right: 20px;
+					text-decoration: none;
 
 					&:hover {
 						background: transparent url(../images/arrows/05_right.png) right center no-repeat;
