--- a/core-bc/modules/theme/src/main/webapp/css/partials/utilities/_variables.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/utilities/_variables.scss
@@ -67,6 +67,9 @@ $heading-h1-color:		$vgrintra-mineshaft;
 $link-color:			$linkColor; //From _aui_variables
 $link-hover-color:		$linkColorHover; //From _aui_variables
 
+$link-color: $vgrintra-mineshaft;
+$link-color-hover: $vgrintra-black;
+
 $menu-bar-bg:				$vgrintra-white;
 $menu-bar-color:			$vgrintra-tundora;
 
